$Id: NEWS,v 1.384 2003-03-04 19:28:26 castaglia Exp $

CVS
---------------------------------
- Bug 1828 - mod_sql can only find mysql.sock if in /tmp.  This was caused
  by the fact that mod_sql_mysql did not load/read the MySQL .cnf
  configuration files.  Now, when starting, mod_sql_mysql will read .cnf
  files for "proftpd" and "client" sections.
- Bug 1960 - Add removed file size by DELE command to xferlog.
- Bug 1967 - Add display of uptime to ftpwho, ftptop.

1.2.8 - Released 04-Mar-2003
---------------------------------
- Bug 1863 - Unable to build under UnixWare 7
- Bug 1943 - Unable to install on FreeBSD 5.0.  FreeBSD 5.0's header files
  have been rewritten, and glibc's glob.h collided with the new files.  The
  fix was simply to use size_t, rather than trying to determine and use
  __size_t (glob.h was intended to be used during library compilation, not
  during application compilation).
- Bug 1950 - OSX setgrent(3) returns int, causing compiler warning.  Unlike
  most other Unix flavours (but like FreeBSD), OSX's setgrent(3) returns
  int, rather than void.  A configure check was written to test for this. 
- Bug 1949 - Compiler warns of 'long double' usage on OSX.  Typecasts have
  been added to quell some warnings, and an autoconf check added for compiler
  support for -Wno-long-double to quell others.
- Bug 1952 - Umask Bug: Server Not Honoring VirtualHost Umask.  This was
  a statcache caching effect bug.
- Bug 1916 - Transfers hang with strange transfertime in logfile.  This
  appears to have been due to use of an uninitialized value.
- Bug 1948 - mod_xfer relinquishes privs before chmod takes place.  In
  places where UserOwner is used to "give away" files, the chmod() attempt
  that follows the chown() (used to preserve permissions sometimes altered
  by the operating system's chown(2) call) did not use root privs, and thus
  the client did not have permission to write the file.
- Added FTPS FEAT responses, as per Section 5 of the FTPS Draft.